# Plaid_reports_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
output/: acapid_itemid_map_plaid.csv  scrap.txt
reports/: sample.json
sql/: fetch_reports.sql
src/reports_parser/: export_to_csv.py  fetch_reports.py  get_directory_path.py  get_item_id.py  get_report_list.py  main.py
src/reports_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
